Name:                vsim
Version:             0.1
Synopsis:            VHDL simulator
License:             BSD3
License-file:        LICENSE
Author:              Sergey Mironov
Maintainer:          ierton@gmail.com
Category:            Language
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2
-- Copyright:           
-- Description:         

Executable VirCheck
  hs-source-dirs:    src
  main-is:           VirCheck.hs


Library
  hs-source-dirs:    src
  -- Modules exported by the library.
  Exposed-modules: VSim.VIR.Types, VSim.VIR.Monad, VSim.VIR.Lexer, VSim.VIR.AST, VSim.Data.TInt, VSim.Data.NamePath, VSim.Data.Loc, VSim.Data.Line, VSim.Data.Int128
  
  -- Packages needed in order to build this package.
  Build-depends: base, mtl, syb, containers, bytestring, filepath, time, array,
                 pretty-show, QuickCheck, haskell-src
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         alex, happy
  

