Name:                vsim
Version:             0.1
Synopsis:            VHDL simulator
License:             BSD3
License-file:        LICENSE
Author:              Sergey Mironov
Maintainer:          ierton@gmail.com
Category:            Language
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2
-- Copyright:           
-- Description:         

flag vircheck
    description: compile VirCheck
    default    : True

Executable VirCheck
  hs-source-dirs:    src
  if flag(vircheck)
    main-is:           VirCheck.hs
  else
    main-is:           VirCheck_Fake.hs

Executable VSim
  hs-source-dirs:    src
  main-is:           VSim.hs
  Build-depends:     haskell-src-exts

Library
  hs-source-dirs:    src
  -- Modules exported by the library.
  Exposed-modules: VSim.VIR.Types, VSim.VIR.Monad, VSim.VIR.Lexer, VSim.VIR.AST, VSim.Data.TInt, VSim.Data.NamePath, VSim.Data.Loc, VSim.Data.Line, VSim.Data.Int128
  
  -- Packages needed in order to build this package.
  Build-depends: base, mtl, syb, containers, bytestring, filepath, time, array,
                 pretty-show, QuickCheck
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         alex, happy
  

